# aid-cli

./: .gitignore  404.html  Cargo.toml  README.md  index.html  install.ps1  install.sh  mkdocs.yml  search.html  sitemap.xml
.github/workflows/: docs.yml  release-pipeline.yml
contributing/: index.html
docs/: contributing.md  index.md  quickstart.md  releases.md
docs/features/: bits.md  cpu.md  csv.md  disk.md  env.md  file.md  http.md  ip.md  json.md  math.md  mem.md  network.md  port.md  process.md  text.md  time.md
features/bits/: index.html
features/cpu/: index.html
features/csv/: index.html
features/disk/: index.html
features/env/: index.html
features/file/: index.html
features/http/: index.html
features/ip/: index.html
features/json/: index.html
features/math/: index.html
features/mem/: index.html
features/network/: index.html
features/port/: index.html
features/process/: index.html
features/text/: index.html
features/time/: index.html
quickstart/: index.html
releases/: index.html
search/: search_index.json
src/: bits_commands.rs  bits_utils.rs  cpu_commands.rs  csv_commands.rs  csv_utils.rs  disk_commands.rs  env_commands.rs  file_commands.rs  format_utils.rs  graph_utils.rs  http_commands.rs  input_utils.rs  ip_commands.rs  ip_utils.rs  json_commands.rs  lib.rs  main.rs  math_commands.rs  math_utils.rs  mem_commands.rs  network_commands.rs  port_commands.rs  process_commands.rs  text_commands.rs  time_commands.rs
support/: index.html
tests/: csv_sql_search_tests.rs  math_exp_tests.rs
