[package]
name = "aid"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
comfy-table = "7.1.1"
num-traits = "0.2.19"
ping = "0.5.2"
rand = "0.8.5"
reqwest = "0.12.8"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.129"
socket2 = "0.5.7"
sysinfo = "0.32.0"
tokio = { version = "1", features = ["full"] }
csv = "1.3.0"
nom = "7.1.3"